--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -10,7 +10,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:5000"
+      "applicationUrl": "http://localhost:5000",
+      "launchUrl": "Swagger" // This ensures the browser opens to the root (Swagger UI)
     }
   }
 }
